// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityPostsComponent should show community post replies 1`] = `
<pf-community-post-replies
  avatarUrl={[Function String]}
  loading="false"
  replies={[Function Array]}
  store={[Function Store]}
>
  <div
    class="mt-2"
  >
    
    
    
    <div
      class="reply-offset"
    >
      No Replies
    </div>
  </div>
</pf-community-post-replies>
`;

exports[`CommunityPostsComponent should show community post replies loading indicator 1`] = `
<pf-community-post-replies
  avatarUrl={[Function String]}
  loading={[Function Boolean]}
  replies={[Function Array]}
  store={[Function Store]}
>
  <div
    class="mt-2"
  >
    
    
    <pf-loading-indicator
      class="loading-indicator reply-offset"
    />
    
  </div>
</pf-community-post-replies>
`;
